[gd_scene load_steps=58 format=2]

[ext_resource path="res://art/91195114_2809030885841186_2486619037400825856_n.png" type="Texture" id=1]
[ext_resource path="res://art/91334323_928082677632123_4962471042762145792_n (1).png" type="Texture" id=2]
[ext_resource path="res://art/flappy-bird-background-png-7.png" type="Texture" id=3]
[ext_resource path="res://art/92241974_154071102555083_5862994190014611456_n.png" type="Texture" id=4]
[ext_resource path="res://Hangman.gd" type="Script" id=5]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sound/MouseSound.wav" type="AudioStream" id=7]
[ext_resource path="res://art/92099342_371572617188711_1441411069149970432_n.png" type="Texture" id=8]
[ext_resource path="res://sound/TingSound.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/DuckSound.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/media.io_y2mate (mp3cut.net).wav" type="AudioStream" id=11]
[ext_resource path="res://fonts/game_over.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Mouse.gd" type="Script" id=13]
[ext_resource path="res://sound/LoseSound.wav" type="AudioStream" id=14]
[ext_resource path="res://sound/WinSound.wav" type="AudioStream" id=15]
[ext_resource path="res://art/congrat.png" type="Texture" id=16]
[ext_resource path="res://fonts/Bargain_Demo.ttf" type="DynamicFontData" id=17]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="DynamicFont" id=3]
size = 20
outline_color = Color( 0.278431, 0.278431, 0.627451, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=5]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.984314, 0.572549, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.929412, 0.156863, 0.0980392, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.929412, 0.156863, 0.0980392, 1 )

[sub_resource type="DynamicFont" id=9]
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0313726, 0.00392157, 0.00392157, 1 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )

[sub_resource type="DynamicFont" id=13]
size = 13
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.596078, 0.258824, 0.827451, 1 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.964706, 0.286275, 0.843137, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.964706, 0.286275, 0.843137, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 0.686275, 0.929412, 1 )

[sub_resource type="DynamicFont" id=19]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.964706, 0.286275, 0.843137, 1 )
border_color = Color( 0.827451, 0.603922, 0.603922, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.964706, 0.286275, 0.843137, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 1, 0.686275, 0.929412, 1 )

[sub_resource type="DynamicFont" id=23]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.964706, 0.286275, 0.843137, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.964706, 0.286275, 0.843137, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 1, 0.686275, 0.929412, 1 )

[sub_resource type="DynamicFont" id=27]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.964706, 0.286275, 0.843137, 1 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.964706, 0.286275, 0.843137, 1 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 1, 0.686275, 0.929412, 1 )

[sub_resource type="DynamicFont" id=31]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=32]
size = 85
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.996078, 0.811765, 0.811765, 1 )
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 1

[sub_resource type="DynamicFont" id=34]
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.0745098, 0.521569, 0.564706, 1 )

[sub_resource type="DynamicFont" id=36]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.0745098, 0.521569, 0.564706, 1 )

[sub_resource type="DynamicFont" id=38]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=39]

[sub_resource type="DynamicFont" id=40]
size = 38
font_data = ExtResource( 12 )

[node name="Hangman" type="Node"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 568.985, 364.617 )
scale = Vector2( 1.47, 1.47 )
texture = ExtResource( 3 )

[node name="Ladder" type="Sprite" parent="."]
position = Vector2( 401.023, 472.849 )
scale = Vector2( 0.327426, 0.266028 )
texture = ExtResource( 4 )

[node name="Princess" type="Sprite" parent="."]
position = Vector2( 394.901, 317.076 )
scale = Vector2( 0.431406, 0.399522 )
texture = ExtResource( 1 )

[node name="Stream" type="AudioStreamPlayer" parent="Princess"]
stream = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -359.955
margin_top = -378.279
margin_right = 118.045
margin_bottom = 159.721
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Word" type="Label" parent="RichTextLabel"]
margin_left = 273.126
margin_top = 200.937
margin_right = 471.126
margin_bottom = 244.937
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.0352941, 0.0470588, 0.0627451, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keyword" type="Label" parent="RichTextLabel"]
margin_left = 158.596
margin_top = 201.525
margin_right = 264.596
margin_bottom = 244.525
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Keyword"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guess" type="LineEdit" parent="RichTextLabel"]
margin_left = 169.955
margin_top = 326.0
margin_right = 376.955
margin_bottom = 414.179
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="Button" parent="RichTextLabel"]
margin_left = 317.09
margin_top = 423.459
margin_right = 369.09
margin_bottom = 449.459
custom_styles/hover = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Click"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer" type="Label" parent="RichTextLabel"]
margin_left = 179.315
margin_top = 328.098
margin_right = 371.315
margin_bottom = 359.098
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.427451, 0.407843, 0.419608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Enter your answer:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong" type="Label" parent="RichTextLabel"]
margin_left = 171.0
margin_top = 455.0
margin_right = 373.0
margin_bottom = 526.0
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.941176, 0.219608, 0.219608, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wordwrong" type="Label" parent="RichTextLabel"]
margin_left = 176.0
margin_top = 458.0
margin_right = 298.0
margin_bottom = 478.0
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.494118, 0.478431, 0.478431, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Wrong answers:"
align = 1
valign = 1

[node name="remainLives" type="Sprite" parent="."]

[node name="Heart1" type="Sprite" parent="remainLives"]
position = Vector2( 296, 38 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="Heart2" type="Sprite" parent="remainLives"]
position = Vector2( 324, 38 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="Heart3" type="Sprite" parent="remainLives"]
position = Vector2( 352, 38 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="Heart4" type="Sprite" parent="remainLives"]
position = Vector2( 380, 38 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="Heart5" type="Sprite" parent="remainLives"]
position = Vector2( 408, 38 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="Heart6" type="Sprite" parent="remainLives"]
position = Vector2( 436, 38 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="Heart7" type="Sprite" parent="remainLives"]
position = Vector2( 464, 38 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="Ting" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Category" type="Label" parent="."]
margin_left = 46.3151
margin_top = 114.441
margin_right = 324.315
margin_bottom = 314.441
rect_scale = Vector2( 1.47165, 2.30026 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "                    "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weather" type="Button" parent="Category"]
margin_left = 146.295
margin_top = 103.683
margin_right = 219.295
margin_bottom = 123.683
rect_scale = Vector2( 1.5, 1.3 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Weather"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animals" type="Button" parent="Category"]
margin_left = 22.0
margin_top = 103.861
margin_right = 95.0
margin_bottom = 123.861
rect_scale = Vector2( 1.5, 1.3 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Animals"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="food" type="Button" parent="Category"]
margin_left = 22.0
margin_top = 142.069
margin_right = 95.0
margin_bottom = 162.069
rect_scale = Vector2( 1.5, 1.3 )
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
custom_fonts/font = SubResource( 27 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Food"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="travel" type="Button" parent="Category"]
margin_left = 145.671
margin_top = 141.871
margin_right = 218.671
margin_bottom = 161.871
rect_scale = Vector2( 1.5, 1.3 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/normal = SubResource( 30 )
custom_fonts/font = SubResource( 31 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Travel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hint" type="Label" parent="."]
margin_left = 102.811
margin_top = 194.703
margin_right = 404.811
margin_bottom = 284.703
custom_fonts/font = SubResource( 32 )
text = "Category"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crocodice" type="Sprite" parent="."]
position = Vector2( 76.9162, 595.563 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Mouse" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Sound" type="AudioStreamPlayer" parent="Mouse"]
stream = ExtResource( 7 )

[node name="EndGame" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.582
anchor_right = 0.5
anchor_bottom = 0.582
margin_left = -161.052
margin_top = -163.009
margin_right = -121.052
margin_bottom = -151.009
rect_scale = Vector2( 8.0123, 22.6957 )
custom_styles/normal = SubResource( 33 )
custom_fonts/font = SubResource( 34 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinBackground" type="Sprite" parent="EndGame"]
visible = false
position = Vector2( 19.9929, 4.6949 )
rotation = 1.5708
scale = Vector2( 0.0281428, 0.118911 )
texture = ExtResource( 16 )

[node name="WinSound" type="AudioStreamPlayer" parent="EndGame/WinBackground"]
stream = ExtResource( 15 )

[node name="LoseBackground" type="Sprite" parent="EndGame"]
visible = false
position = Vector2( 6.5, 3 )

[node name="LoseSound" type="AudioStreamPlayer" parent="EndGame/LoseBackground"]
stream = ExtResource( 14 )

[node name="PlayAgain" type="Button" parent="EndGame"]
margin_left = 6.21477
margin_top = 8.06123
margin_right = 62.2148
margin_bottom = 34.0613
rect_scale = Vector2( 0.2, 0.09 )
custom_styles/normal = SubResource( 35 )
custom_fonts/font = SubResource( 36 )
text = "again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="Button" parent="EndGame"]
margin_left = 22.8181
margin_top = 8.05109
margin_right = 78.8181
margin_bottom = 34.0511
rect_scale = Vector2( 0.2, 0.09 )
custom_styles/normal = SubResource( 37 )
custom_fonts/font = SubResource( 38 )
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="displayResult" type="Label" parent="EndGame"]
margin_left = 7.36451
margin_top = 3.46864
margin_right = 77.3645
margin_bottom = 38.4686
rect_scale = Vector2( 0.358775, 0.105021 )
custom_styles/normal = SubResource( 39 )
custom_fonts/font = SubResource( 40 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.54902, 0.180392, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="RichTextLabel/Click" to="." method="_on_Click_pressed"]
[connection signal="pressed" from="Category/weather" to="." method="_on_weather_pressed"]
[connection signal="pressed" from="Category/animals" to="." method="_on_animals_pressed"]
[connection signal="pressed" from="Category/food" to="." method="_on_food_pressed"]
[connection signal="pressed" from="Category/travel" to="." method="_on_travel_pressed"]
[connection signal="pressed" from="EndGame/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="EndGame/QuitGame" to="." method="_on_QuitGame_pressed"]
